maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: type mismatch;
 found   : Unit
 required: List[Int]
  for(x <- 0 until X){
        ^ShortestPathMaze:31: error: type mismatch;
 found   : (Int, Int)
 required: List[Int]
    marquerSol((x,y-1), numero+1);
               ^ShortestPathMaze:33: error: type mismatch;
 found   : (Int, Int)
 required: List[Int]
    marquerSol((x,y+1), numero+1);
               ^ShortestPathMaze:37: error: type mismatch;
 found   : (Int, Int)
 required: List[Int]
    marquerSol((x-1,y), numero+1);
               ^ShortestPathMaze:39: error: type mismatch;
 found   : (Int, Int)
 required: List[Int]
    marquerSol((x+1,y), numero+1);
               ^